switch text-adventure to point at master branch instead of tcp-server branch of that repo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
 
   text-adventure:
     container_name: text-adventure
-    build: https://github.com/veryscarycary/farm-text-adventure.git#tcp-server
+    build:
+      context: https://github.com/veryscarycary/farm-text-adventure.git
+      dockerfile: Dockerfile-tcp-server
     stdin_open: true  # necessary for interactive mode
     tty: true  # necessary for interactive mode
     ports:
